<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="36dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/bg_white_border_20"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/TextTitleDarkBlue"
            android:layout_gravity="center"
            android:text="@string/selection_gender"/>

        <TextView
            style="@style/TextDocumentDarkBlue"
            android:id="@+id/textViewMale"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:text="@string/male"/>

        <TextView
            style="@style/TextDocumentDarkBlue"
            android:id="@+id/textViewFemale"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/female"/>

        <TextView
            style="@style/TextDocumentDarkBlue"
            android:id="@+id/textViewOther"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/other"/>

        <TextView
            style="@style/TextContentOrange"
            android:id="@+id/textViewLeave"
            android:layout_marginTop="24dp"
            android:layout_gravity="end"
            android:text="@string/leave"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>