<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.emanh.emanh.viewModel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".view.activity.SetAvatarActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:background="@drawable/bg_blue_blur50_0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:padding="16dp"
                android:orientation="vertical"
                android:background="@drawable/bg_black_blue_blur50_30"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    style="@style/TextTitleWhite"
                    android:layout_gravity="center"
                    android:text="@string/tv_select_avatar_your"/>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:background="@drawable/bg_white_border_250">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageViewAvatar"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        android:importantForAccessibility="no"
                        android:background="@drawable/avatar_user_default"
                        android:onClick="@{() -> loginViewModel.onAvatarClicked()}"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                        app:imageUri="@{loginViewModel.avatarUri}"/>

                </FrameLayout>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/ButtonLightBlue"
                    android:id="@+id/buttonConfirm"
                    android:layout_marginTop="72dp"
                    android:text="@string/confirm"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    style="@style/TextTitleWhite"
                    android:id="@+id/textViewBack"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/back"/>

                <TextView
                    style="@style/TextTitleWhite"
                    android:id="@+id/textViewSkip"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:text="@string/skip"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>